--- a/package.json
+++ b/package.json
@@ -11,6 +11,30 @@
   "engines": {
     "node": ">=22.0.0 <24.0.0"
   },
+  "dependencies": {
+    "@nestjs/axios": "^4.0.0",
+    "@nestjs/cache-manager": "^3.0.1",
+    "@nestjs/common": "^11.1.3",
+    "@nestjs/config": "^4.0.2",
+    "@nestjs/core": "^11.1.3",
+    "@nestjs/platform-express": "^11.1.3",
+    "@nestjs/schedule": "^6.0.0",
+    "@nestjs/typeorm": "^11.0.0",
+    "axios": "^1.10.0",
+    "cache-manager": "^7.0.0",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.2",
+    "cross-env": "^7.0.3",
+    "date-fns": "^4.1.0",
+    "dotenv": "^16.5.0",
+    "joi": "^17.13.3",
+    "mysql2": "^3.14.1",
+    "reflect-metadata": "^0.2.2",
+    "rimraf": "^6.0.1",
+    "rxjs": "^7.8.2",
+    "typeorm": "^0.3.25",
+    "typeorm-extension": "^3.7.1"
+  },
   "devDependencies": {
     "@nestjs/cli": "^11.0.7",
     "@nestjs/schematics": "^11.0.5",
@@ -33,27 +57,5 @@
     "ts-node": "^10.9.2",
     "tsconfig-paths": "^4.2.0",
     "typescript": "^5.8.3"
-  },
-  "dependencies": {
-    "@nestjs/axios": "^4.0.0",
-    "@nestjs/cache-manager": "^3.0.1",
-    "@nestjs/common": "^11.1.3",
-    "@nestjs/config": "^4.0.2",
-    "@nestjs/core": "^11.1.3",
-    "@nestjs/platform-express": "^11.1.3",
-    "@nestjs/schedule": "^6.0.0",
-    "@nestjs/typeorm": "^11.0.0",
-    "axios": "^1.10.0",
-    "cache-manager": "^7.0.0",
-    "class-transformer": "^0.5.1",
-    "class-validator": "^0.14.2",
-    "cross-env": "^7.0.3",
-    "date-fns": "^4.1.0",
-    "joi": "^17.13.3",
-    "reflect-metadata": "^0.2.2",
-    "rimraf": "^6.0.1",
-    "rxjs": "^7.8.2",
-    "typeorm": "^0.3.25",
-    "typeorm-extension": "^3.7.1"
   }
 }
