--- a/package.json
+++ b/package.json
@@ -6,7 +6,22 @@
   "private": true,
   "license": "UNLICENSED",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "rimraf dist && nx run-many --target build --all --parallel",
+    "build:deps": "rimraf dist && nx run-many --target build-deps --all --parallel",
+    "build:core": "npx nx build core",
+    "build:service-a": "",
+    "build:service-b": "",
+    "start": "nx run-many --target serve --all --parallel",
+    "start:service-a": "nx run service-a:serve",
+    "start:service-b": "nx run service-b:serve",
+    "typecheck": "nx run-many --target typecheck --all --parallel",
+    "lint": "nx run-many --target lint --all --parallel",
+    "format": "nx run-many --target format --all --parallel",
+    "format:check": "nx run-many --target format:check --all --parallel",
+    "test:watch": "nx run-many --target test --all --parallel --watch",
+    "test:ci": "nx run-many --target test --all --parallel --ci",
+    "test:debug": "nx run-many --target test --all --parallel --debug",
+    "test:debug:watch": "nx run-many --target test --all --parallel"
   },
   "engines": {
     "node": ">=22.0.0 <24.0.0"
@@ -36,9 +51,17 @@
     "typeorm-extension": "^3.7.1"
   },
   "devDependencies": {
+    "@eslint/js": "^9.8.0",
     "@nestjs/cli": "^11.0.7",
     "@nestjs/schematics": "^11.0.5",
     "@nestjs/testing": "^11.1.3",
+    "@nx/eslint": "21.2.1",
+    "@nx/eslint-plugin": "21.2.1",
+    "@nx/jest": "21.2.1",
+    "@nx/js": "21.2.1",
+    "@swc-node/register": "~1.9.1",
+    "@swc/core": "~1.5.7",
+    "@swc/helpers": "~0.5.11",
     "@types/express": "^5.0.3",
     "@types/jest": "^30.0.0",
     "@types/node": "^24.0.4",
@@ -49,6 +72,9 @@
     "eslint-config-prettier": "^10.1.5",
     "eslint-plugin-prettier": "^5.5.1",
     "jest": "^30.0.3",
+    "jest-environment-node": "^29.7.0",
+    "jsonc-eslint-parser": "^2.1.0",
+    "nx": "21.2.1",
     "prettier": "^3.6.1",
     "source-map-support": "^0.5.21",
     "supertest": "^7.1.1",
@@ -56,6 +82,15 @@
     "ts-loader": "^9.5.2",
     "ts-node": "^10.9.2",
     "tsconfig-paths": "^4.2.0",
-    "typescript": "^5.8.3"
+    "tslib": "^2.3.0",
+    "typescript": "^5.8.3",
+    "typescript-eslint": "^8.29.0",
+    "verdaccio": "^6.0.5"
+  },
+  "workspaces": [
+    "libs/*"
+  ],
+  "nx": {
+    "includedScripts": []
   }
 }
