feat: adjust structure

--- a/apps/serviceA/tsconfig.app.json
+++ b/apps/serviceA/tsconfig.app.json
@@ -1,7 +1,7 @@
 {
-  "extends": "../../tsconfig.json",
+  "extends": "./tsconfig.json",
   "compilerOptions": {
-    "declaration": true,
+    "baseUrl": "./",
     "outDir": "../../dist/apps/serviceA"
   },
   "include": ["src/**/*"],
