--- a/apps/serviceB/tsconfig.app.json
+++ b/apps/serviceB/tsconfig.app.json
@@ -1,7 +1,7 @@
 {
-  "extends": "../../tsconfig.json",
+  "extends": "./tsconfig.json",
   "compilerOptions": {
-    "declaration": false,
+    "baseUrl": "./",
     "outDir": "../../dist/apps/serviceB"
   },
   "include": ["src/**/*"],
