--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "build": "rimraf dist && nx run-many --target build --all --parallel",
     "build:deps": "rimraf dist && nx run-many --target build-deps --all --parallel",
     "build:core": "npx nx build core",
-    "build:service-a": "",
-    "build:service-b": "",
+    "build:service-a": "npx nx build serviceA",
+    "build:service-b": "npx nx build serviceB",
     "start": "nx run-many --target serve --all --parallel",
     "start:service-a": "nx run service-a:serve",
     "start:service-b": "nx run service-b:serve",
@@ -34,21 +34,30 @@
     "@nestjs/core": "^11.1.3",
     "@nestjs/platform-express": "^11.1.3",
     "@nestjs/schedule": "^6.0.0",
+    "@nestjs/swagger": "^11.2.0",
     "@nestjs/typeorm": "^11.0.0",
     "axios": "^1.10.0",
+    "bcrypt": "^6.0.0",
     "cache-manager": "^7.0.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
+    "cors": "^2.8.5",
     "cross-env": "^7.0.3",
     "date-fns": "^4.1.0",
     "dotenv": "^16.5.0",
+    "express": "^5.1.0",
     "joi": "^17.13.3",
     "mysql2": "^3.14.1",
+    "nest-winston": "^1.10.2",
     "reflect-metadata": "^0.2.2",
     "rimraf": "^6.0.1",
     "rxjs": "^7.8.2",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1",
     "typeorm": "^0.3.25",
-    "typeorm-extension": "^3.7.1"
+    "typeorm-extension": "^3.7.1",
+    "uuid": "^11.1.0",
+    "winston": "^3.17.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.8.0",
@@ -59,6 +68,12 @@
     "@nx/eslint-plugin": "21.2.1",
     "@nx/jest": "21.2.1",
     "@nx/js": "21.2.1",
+    "@nx/linter": "^19.8.4",
+    "@nx/nest": "^21.2.1",
+    "@nx/node": "21.2.1",
+    "@nx/web": "21.2.1",
+    "@nx/webpack": "21.2.1",
+    "@nx/workspace": "^21.2.1",
     "@swc-node/register": "~1.9.1",
     "@swc/core": "~1.5.7",
     "@swc/helpers": "~0.5.11",
@@ -76,6 +91,7 @@
     "jsonc-eslint-parser": "^2.1.0",
     "nx": "21.2.1",
     "prettier": "^3.6.1",
+    "run-script-webpack-plugin": "^0.2.3",
     "source-map-support": "^0.5.21",
     "supertest": "^7.1.1",
     "ts-jest": "^29.4.0",
@@ -85,7 +101,10 @@
     "tslib": "^2.3.0",
     "typescript": "^5.8.3",
     "typescript-eslint": "^8.29.0",
-    "verdaccio": "^6.0.5"
+    "verdaccio": "^6.0.5",
+    "webpack": "^5.99.9",
+    "webpack-cli": "^5.1.4",
+    "webpack-node-externals": "^3.0.0"
   },
   "workspaces": [
     "libs/*"
