--- a/apps/serviceA/project.json
+++ b/apps/serviceA/project.json
@@ -1,6 +1,6 @@
 {
   "name": "serviceA",
-  "$schema": "../node_modules/nx/schemas/project-schema.json",
+  "$schema": "../../node_modules/nx/schemas/project-schema.json",
   "sourceRoot": "apps/serviceA/src",
   "projectType": "application",
   "tags": [],
