chore: update env

--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "build": "rimraf dist && nx run-many --target build --all --parallel",
     "build:deps": "rimraf dist && nx run-many --target build-deps --all --parallel",
     "build:core": "npx nx build core",
+    "build:main": "npx nx build main",
     "build:service-a": "npx nx build serviceA",
     "build:service-b": "npx nx build serviceB",
     "start": "nx run-many --target serve --all --parallel",
+    "start:main": "nx run main:serve",
     "start:service-a": "nx run service-a:serve",
     "start:service-b": "nx run service-b:serve",
     "typecheck": "nx run-many --target typecheck --all --parallel",
