--- a/apps/serviceA/stage.production.env
+++ b/apps/serviceA/stage.production.env
@@ -1,8 +1,8 @@
-PORT=3001
+PORT=3002
 DB_HOST=db
-DB_PORT=5432
-DB_USERNAME=postgres
-DB_PASSWORD=postgres
-DB_DATABASE=postgres
+DB_PORT=3306
+DB_USERNAME=shared_user
+DB_PASSWORD=shared_user_123
+DB_DATABASE=shared
 HTTP_TIMEOUT=5000
 HTTP_MAX_REDIRECTS=5
