--- a/libs/core/package.json
+++ b/libs/core/package.json
@@ -2,9 +2,15 @@
   "name": "@shared/core",
   "version": "0.0.1",
   "type": "commonjs",
-  "main": "./src/index.js",
-  "types": "./src/index.d.ts",
+  "main": "./index.js",
+  "types": "./index.d.ts",
   "dependencies": {
     "tslib": "^2.3.0"
-  }
+  },
+  "scripts": {
+    "build": "tsc -p tsconfig.lib.json"
+  },
+  "files": [
+    "dist"
+  ]
 }
