chore: update dev run config

--- a/apps/main/stage.development.env
+++ b/apps/main/stage.development.env
@@ -1,8 +1,10 @@
 PORT=3001
-DB_HOST=db
+DB_HOST=mysql-db
 DB_PORT=3306
 DB_USERNAME=shared_user
 DB_PASSWORD=shared_user_123
 DB_DATABASE=shared
 HTTP_TIMEOUT=5000
 HTTP_MAX_REDIRECTS=5
+NODE_ENV=development
+APP_NAME=main
