--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "test:watch": "nx run-many --target test --all --parallel --watch",
     "test:ci": "nx run-many --target test --all --parallel --ci",
     "test:debug": "nx run-many --target test --all --parallel --debug",
-    "test:debug:watch": "nx run-many --target test --all --parallel"
+    "test:debug:watch": "nx run-many --target test --all --parallel",
+    "migration:run": "nx run core:migrate",
+    "migration:generate": "typeorm migration:generate -d libs/core/src/migrations/data-source.ts libs/core/src/migrations/generated"
   },
   "engines": {
     "node": ">=22.0.0 <24.0.0"
@@ -91,6 +93,7 @@
     "jest": "^30.0.3",
     "jest-environment-node": "^29.7.0",
     "jsonc-eslint-parser": "^2.1.0",
+    "nodemon": "^3.1.10",
     "nx": "21.2.1",
     "prettier": "^3.6.1",
     "run-script-webpack-plugin": "^0.2.3",
@@ -99,6 +102,7 @@
     "ts-jest": "^29.4.0",
     "ts-loader": "^9.5.2",
     "ts-node": "^10.9.2",
+    "ts-node-dev": "^2.0.0",
     "tsconfig-paths": "^4.2.0",
     "tslib": "^2.3.0",
     "typescript": "^5.8.3",
