--- a/package.json
+++ b/package.json
@@ -14,8 +14,11 @@
     "build:service-b": "npx nx build serviceB",
     "start": "nx run-many --target serve --all --parallel",
     "start:main": "nx run main:serve",
+    "start:prod:main": "node dist/main/main.js",
     "start:service-a": "nx run service-a:serve",
+    "start:prod:service-a": "node dist/service-a/service-a.js",
     "start:service-b": "nx run service-b:serve",
+    "start:prod:service-b": "node dist/service-b/service-b.js",
     "typecheck": "nx run-many --target typecheck --all --parallel",
     "lint": "nx run-many --target lint --all --parallel",
     "format": "nx run-many --target format --all --parallel",
