--- a/apps/main/Dockerfile.dev
+++ b/apps/main/Dockerfile.dev
@@ -2,12 +2,19 @@ FROM node:22-alpine
 
 WORKDIR /usr/src/app
 
-RUN apk add --no-cache bash curl dos2unix
+COPY package*.json ./
+COPY nx.json ./
+COPY tsconfig*.json ./
 
-COPY service/package.json ./
+COPY apps/main/project.json ./apps/main/
+COPY libs/core/project.json ./libs/core/
 
 RUN npm install
 
-COPY service ./
+COPY . .
 
-ENTRYPOINT [ "npm", "run", "start:dev" ]
+EXPOSE 3001
+
+# CMD ["npx", "nx", "serve", "main", "--watch"]
+
+CMD ["npm", "run", "start:main"]
