--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,50 +22,81 @@ services:
     networks:
       - shared-network
 
-  main-service:
-    image: main-service:dev
-    container_name: main-service
+  migrations:
+    image: migrations:dev
+    container_name: migration-runner
     build:
       context: .
-      dockerfile: apps/main/Dockerfile.dev
-    tty: true
+      dockerfile: apps/main/Dockerfile.migrations
     env_file:
       - ./apps/main/stage.development.env
-    volumes:
-      - .:/usr/src/app # detect if there are any files changes to reload the app
-      - /usr/src/app/node_modules # re-use node_modules inside the container
+    depends_on:
+      mysql-db:
+        condition: service_healthy
+    networks:
+      - shared-network
+    restart: "no"
+
+  phpmyadmin:
+    image: phpmyadmin/phpmyadmin
+    container_name: phpmyadmin
     restart: unless-stopped
+    ports:
+      - "8080:80"
+    environment:
+      PMA_HOST: mysql-db
+      PMA_PORT: 3306
+      MYSQL_ROOT_PASSWORD: shared_user_123
     depends_on:
       mysql-db:
         condition: service_healthy
     networks:
       - shared-network
 
-  service-a:
-    image: service-a:dev
-    container_name: service-a
-    build:
-      context: .
-      dockerfile: apps/serviceA/Dockerfile.dev
-    tty: true
-    depends_on:
-      mysql-db:
-        condition: service_healthy
-    networks:
-      - shared-network
+  # main-service:
+  #   image: main-service:dev
+  #   container_name: main-service
+  #   build:
+  #     context: .
+  #     dockerfile: apps/main/Dockerfile.dev
+  #   tty: true
+  #   env_file:
+  #     - ./apps/main/stage.development.env
+  #   # volumes:
+  #   #   - .:/usr/src/app
+  #   #   - node_modules:/usr/src/app/node_modules
+  #   restart: unless-stopped
+  #   depends_on:
+  #     migrations:
+  #       condition: service_completed_successfully
+  #   networks:
+  #     - shared-network
 
-  service-b:
-    image: service-b:dev
-    container_name: service-b
-    build:
-      context: .
-      dockerfile: apps/serviceB/Dockerfile.dev
-    tty: true
-    depends_on:
-      mysql-db:
-        condition: service_healthy
-    networks:
-      - shared-network
+  # service-a:
+  #   image: service-a:dev
+  #   container_name: service-a
+  #   build:
+  #     context: .
+  #     dockerfile: apps/serviceA/Dockerfile.dev
+  #   tty: true
+  #   depends_on:
+  #     migrations:
+  #       condition: service_completed_successfully
+  #   networks:
+  #     - shared-network
+
+  # service-b:
+  #   image: service-b:dev
+  #   container_name: service-b
+  #   build:
+  #     context: .
+  #     dockerfile: apps/serviceB/Dockerfile.dev
+  #   tty: true
+  #   depends_on:
+  #     migrations:
+  #       condition: service_completed_successfully
+  #   networks:
+  #     - shared-network
 
 networks:
   shared-network:
@@ -75,3 +106,4 @@ networks:
 volumes:
   shared-db-data:
     name: shared-db-data
+  # node_modules:
