--- a/apps/main/Dockerfile.migrations
+++ b/apps/main/Dockerfile.migrations
@@ -1,4 +1,4 @@
-FROM node:22-slim
+FROM node:23
 
 # Update and install security patches
 RUN apt-get update && apt-get upgrade -y && apt-get clean
@@ -15,7 +15,6 @@ ENV NX_INTERACTIVE=false
 ENV NX_SKIP_NX_CACHE=true
 ENV CI=true
 
-# RUN npm install --verbose
 RUN npm install --verbose
 
 COPY libs/core ./libs/core
