--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "test:debug": "nx run-many --target test --all --parallel --debug",
     "test:debug:watch": "nx run-many --target test --all --parallel",
     "migration:run": "nx run core:migrate",
+    "migration:revert": "npm run migration:revert",
     "migration:generate": "typeorm migration:generate -d libs/core/src/migrations/data-source.ts libs/core/src/migrations/generated"
   },
   "engines": {
