--- a/apps/serviceB/Dockerfile.dev
+++ b/apps/serviceB/Dockerfile.dev
@@ -1,10 +1,15 @@
-FROM node:22-alpine
+FROM node:23
+
+# Update and install security patches
+RUN apt-get update && apt-get upgrade -y && apt-get clean
 
 WORKDIR /usr/src/app
 
 RUN apk add --no-cache bash curl dos2unix
 
 COPY service/package.json ./
+
+ENV NX_DAEMON=false
 
 RUN npm install
 
