--- a/apps/main/Dockerfile.dev
+++ b/apps/main/Dockerfile.dev
@@ -1,4 +1,4 @@
-FROM node:23
+FROM node:23-bullseye
 
 # Update and install security patches
 RUN apt-get update && apt-get upgrade -y && apt-get clean
