--- a/apps/main/Dockerfile.dev
+++ b/apps/main/Dockerfile.dev
@@ -3,7 +3,7 @@ FROM node:23-bullseye
 # Update and install security patches
 RUN apt-get update && apt-get upgrade -y && apt-get clean
 
-WORKDIR /usr/src/app
+WORKDIR /usr/src
 
 COPY package*.json ./
 COPY nx.json ./
@@ -20,4 +20,4 @@ COPY . .
 
 EXPOSE 3001
 
-CMD ["npm", "run", "start:main"]
+CMD ["npm", "run", "start:main:watch"]
