--- a/apps/main/Dockerfile.migrations
+++ b/apps/main/Dockerfile.migrations
@@ -3,7 +3,7 @@ FROM node:23-bullseye
 # Update and install security patches
 RUN apt-get update && apt-get upgrade -y && apt-get clean
 
-WORKDIR /usr/src/app
+WORKDIR /usr/src
 
 COPY package.json package-lock.json ./
 COPY nx.json ./
