--- a/apps/serviceA/Dockerfile.dev
+++ b/apps/serviceA/Dockerfile.dev
@@ -3,7 +3,7 @@ FROM node:23-bullseye
 # Update and install security patches
 RUN apt-get update && apt-get upgrade -y && apt-get clean
 
-WORKDIR /usr/src/app
+WORKDIR /usr/src
 
 COPY package*.json ./
 COPY nx.json ./
