--- a/libs/core/package.json
+++ b/libs/core/package.json
@@ -5,7 +5,15 @@
   "main": "./index.js",
   "types": "./index.d.ts",
   "dependencies": {
-    "tslib": "^2.3.0"
+    "tslib": "^2.3.0",
+    "joi": "^17.13.3",
+    "@nestjs/common": "^11.1.3",
+    "@nestjs/typeorm": "^11.0.0",
+    "class-validator": "^0.14.2",
+    "@nestjs/swagger": "^11.2.0",
+    "class-transformer": "^0.5.1",
+    "typeorm": "^0.3.25",
+    "date-fns": "^4.1.0"
   },
   "scripts": {
     "build": "tsc -p tsconfig.lib.json"
