--- a/package.json
+++ b/package.json
@@ -14,11 +14,12 @@
     "build:service-b": "npx nx build serviceB",
     "start": "nx run-many --target serve --all --parallel",
     "start:main": "nx run main:serve",
-    "start:prod:main": "node dist/main/main.js",
-    "start:service-a": "nx run service-a:serve",
-    "start:prod:service-a": "node dist/service-a/service-a.js",
-    "start:service-b": "nx run service-b:serve",
-    "start:prod:service-b": "node dist/service-b/service-b.js",
+    "start:main:watch": "NX_DAEMON=false NODE_OPTIONS= nx serve main --watch",
+    "start:prod:main": "node dist/apps/main/main.js",
+    "start:service-a": "nx run serviceA:serve",
+    "start:prod:service-a": "node dist/serviceA/main.js",
+    "start:service-b": "nx run serviceB:serve",
+    "start:prod:service-b": "node dist/serviceB/main.js",
     "typecheck": "nx run-many --target typecheck --all --parallel",
     "lint": "nx run-many --target lint --all --parallel",
     "format": "nx run-many --target format --all --parallel",
@@ -41,6 +42,7 @@
     "@nestjs/common": "^11.1.3",
     "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^11.1.3",
+    "@nestjs/microservices": "^11.1.3",
     "@nestjs/platform-express": "^11.1.3",
     "@nestjs/schedule": "^6.0.0",
     "@nestjs/swagger": "^11.2.0",
@@ -69,6 +71,10 @@
     "winston": "^3.17.0"
   },
   "devDependencies": {
+    "@babel/plugin-proposal-class-properties": "^7.18.6",
+    "@babel/plugin-proposal-decorators": "^7.27.1",
+    "@babel/preset-env": "^7.27.2",
+    "@babel/preset-typescript": "^7.27.1",
     "@eslint/js": "^9.8.0",
     "@nestjs/cli": "^11.0.7",
     "@nestjs/schematics": "^11.0.5",
@@ -92,6 +98,7 @@
     "@types/supertest": "^6.0.3",
     "@typescript-eslint/eslint-plugin": "^8.35.0",
     "@typescript-eslint/parser": "^8.35.0",
+    "babel-loader": "^10.0.0",
     "eslint": "^9.29.0",
     "eslint-config-prettier": "^10.1.5",
     "eslint-plugin-prettier": "^5.5.1",
@@ -109,11 +116,13 @@
     "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0",
     "tsconfig-paths": "^4.2.0",
+    "tsconfig-paths-webpack-plugin": "^4.2.0",
     "tslib": "^2.3.0",
     "typescript": "^5.8.3",
     "typescript-eslint": "^8.29.0",
     "verdaccio": "^6.0.5",
     "webpack": "^5.99.9",
+    "webpack-bundle-analyzer": "^4.10.2",
     "webpack-cli": "^5.1.4",
     "webpack-node-externals": "^3.0.0"
   },
