--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -26,7 +26,7 @@
     "sourceMap": true,
     "target": "es2022",
     "paths": {
-      "@shared/core": ["libs/core/src/index.ts"]
+      "@shared/core": ["libs/core/index.ts"]
     }
   }
 }
