--- a/apps/main/project.json
+++ b/apps/main/project.json
@@ -6,14 +6,28 @@
   "tags": [],
   "targets": {
     "build": {
-      "executor": "nx:run-commands",
+      "executor": "@nx/esbuild:esbuild",
+      "cache": false,
+      "outputs": [
+        "{options.outputPath}"
+      ],
+      "defaultConfiguration": "production",
       "options": {
-        "command": "webpack-cli build",
-        "args": ["node-env=production"]
+        "platform": "node",
+        "outputPath": "dist/apps/main",
+        "format": ["cjs"],
+        "bundle": true,
+        "main": "src/main.ts",
+        "tsConfig": "apps/main/tsconfig.app.json",
+        "assets": ["./src/assets", "./README.md"],
+        "generatePackageJson": false,
+        "esbuildConfig": "esbuild-config.js"
       },
       "configurations": {
-        "development": {
-          "args": ["node-env=development"]
+        "development": {},
+        "production": {
+          "generateLockfile": false,
+          "esbuildConfig": "esbuild-config.js"
         }
       }
     },
