--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "@nestjs/platform-express": "^11.1.3",
     "@nestjs/schedule": "^6.0.0",
     "@nestjs/swagger": "^11.2.0",
+    "@nestjs/terminus": "^11.0.0",
     "@nestjs/typeorm": "^11.0.0",
     "axios": "^1.10.0",
     "bcrypt": "^6.0.0",
@@ -70,6 +71,10 @@
     "uuid": "^11.1.0",
     "winston": "^3.17.0"
   },
+  "optionalDependencies": {
+    "@esbuild/darwin-x64": "0.25.2",
+    "@nx/nx-linux-x64-gnu": "20.1.4"
+  },
   "devDependencies": {
     "@babel/plugin-proposal-class-properties": "^7.18.6",
     "@babel/plugin-proposal-decorators": "^7.27.1",
@@ -79,6 +84,7 @@
     "@nestjs/cli": "^11.0.7",
     "@nestjs/schematics": "^11.0.5",
     "@nestjs/testing": "^11.1.3",
+    "@nx/esbuild": "^21.2.2",
     "@nx/eslint": "21.2.1",
     "@nx/eslint-plugin": "21.2.1",
     "@nx/jest": "21.2.1",
@@ -99,6 +105,10 @@
     "@typescript-eslint/eslint-plugin": "^8.35.0",
     "@typescript-eslint/parser": "^8.35.0",
     "babel-loader": "^10.0.0",
+    "esbuild": "^0.25.5",
+    "esbuild-plugin-alias": "^0.2.1",
+    "esbuild-plugin-copy": "^2.1.1",
+    "esbuild-plugin-tsc": "^0.5.0",
     "eslint": "^9.29.0",
     "eslint-config-prettier": "^10.1.5",
     "eslint-plugin-prettier": "^5.5.1",
