--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,7 +29,7 @@ services:
       context: .
       dockerfile: apps/main/Dockerfile.migrations
     env_file:
-      - ./apps/main/stage.development.env
+      - ./apps/main/stage.production.env
     depends_on:
       mysql-db:
         condition: service_healthy
@@ -53,28 +53,29 @@ services:
     networks:
       - shared-network
 
-  main-service:
-    image: main-service:dev
-    container_name: main-service
-    build:
-      context: .
-      dockerfile: apps/main/Dockerfile
-    tty: true
-    env_file:
-      - ./apps/main/stage.production.env
-    ports:
-      - 3001:3001
-    volumes:
-      - .:/usr/src
-      - /usr/src/node_modules
-    restart: unless-stopped
-    depends_on:
-      migrations:
-        condition: service_completed_successfully
-    networks:
-      - shared-network
-    tmpfs:
-      - /tmp
+  # main-service:
+  #   image: main-service:dev
+  #   container_name: main-service
+  #   build:
+  #     context: .
+  #     dockerfile: apps/main/Dockerfile
+  #   tty: true
+  #   stdin_open: true
+  #   env_file:
+  #     - ./apps/main/stage.production.env
+  #   ports:
+  #     - 3001:3001
+  #   volumes:
+  #     - .:/usr/src
+  #     - /usr/src/node_modules
+  #   restart: unless-stopped
+  #   depends_on:
+  #     migrations:
+  #       condition: service_completed_successfully
+  #   networks:
+  #     - shared-network
+  #   tmpfs:
+  #     - /tmp
 
   # service-a:
   #   image: service-a:dev
