--- a/apps/main/Dockerfile.dev
+++ b/apps/main/Dockerfile.dev
@@ -9,10 +9,15 @@ COPY package*.json ./
 COPY nx.json ./
 COPY tsconfig*.json ./
 
+# App and lib configs
 COPY apps/main/project.json ./apps/main/
 COPY libs/core/project.json ./libs/core/
 
-ENV NX_DAEMON=false
+# App and lib source code
+COPY apps/main ./apps/main
+COPY libs/core ./libs/core
+
+ENV NX_DAEMON false
 
 RUN npm install
 
@@ -20,4 +25,4 @@ COPY . .
 
 EXPOSE 3001
 
-CMD ["npm", "run", "start:main:watch"]
+CMD ["npm", "run", "start:main"]
