--- a/apps/serviceA/Dockerfile.dev
+++ b/apps/serviceA/Dockerfile.dev
@@ -9,15 +9,20 @@ COPY package*.json ./
 COPY nx.json ./
 COPY tsconfig*.json ./
 
+# App and lib configs
 COPY apps/serviceA/project.json ./apps/serviceA/
 COPY libs/core/project.json ./libs/core/
 
-ENV NX_DAEMON=false
+# App and lib source code
+COPY apps/serviceA ./apps/serviceA
+COPY libs/core ./libs/core
+
+ENV NX_DAEMON false
 
 RUN npm install
 
 COPY . .
 
-EXPOSE 3002
+EXPOSE 3001
 
 CMD ["npm", "run", "start:service-a"]
