--- a/package.json
+++ b/package.json
@@ -14,11 +14,11 @@
     "build:service-b": "npx nx build serviceB",
     "start": "nx run-many --target serve --all --parallel",
     "start:docker": "docker-compose -f docker-compose.dev.yml up --build",
-    "start:main": "NODE_ENV=development nx run main:serve --configuration=development",
+    "start:main": "NODE_ENV=development nx run main:serve --configuration=development --verbose",
     "start:prod:main": "node dist/apps/main/main.js",
-    "start:service-a": "nx run serviceA:serve --configuration=development",
+    "start:service-a": "NODE_ENV=development nx run serviceA:serve --configuration=development --verbose",
     "start:prod:service-a": "node dist/serviceA/main.js",
-    "start:service-b": "nx run serviceB:serve --configuration=development",
+    "start:service-b": "NODE_ENV=development nx run serviceB:serve --configuration=development --verbose",
     "start:prod:service-b": "node dist/serviceB/main.js",
     "typecheck": "nx run-many --target typecheck --all --parallel",
     "lint": "nx run-many --target lint --all --parallel",
