--- a/apps/serviceA/project.json
+++ b/apps/serviceA/project.json
@@ -6,14 +6,42 @@
   "tags": [],
   "targets": {
     "build": {
-      "executor": "nx:run-commands",
+      "executor": "@nx/esbuild:esbuild",
+      "cache": false,
+      "outputs": ["{options.outputPath}"],
+      "defaultConfiguration": "production",
       "options": {
-        "command": "webpack-cli build",
-        "args": ["node-env=production"]
+        "platform": "node",
+        "outputPath": "dist/apps/serviceA",
+        "format": ["cjs"],
+        "bundle": true,
+        "main": "src/main.ts",
+        "tsConfig": "apps/serviceA/tsconfig.app.json",
+        "assets": [
+          {
+            "input": "apps/serviceA",
+            "glob": "stage.development.env",
+            "output": "."
+          },
+          {
+            "glob": "**/*",
+            "input": "apps/serviceA/src/assets",
+            "output": "assets"
+          },
+          "./README.md"
+        ],
+        
+        "generatePackageJson": false,
+        "esbuildConfig": "esbuild-config.js"
       },
       "configurations": {
         "development": {
-          "args": ["node-env=development"]
+          "generateLockfile": false,
+          "esbuildConfig": "esbuild-config.js"
+        },
+        "production": {
+          "generateLockfile": false,
+          "esbuildConfig": "esbuild-config.js"
         }
       }
     },
@@ -23,15 +51,15 @@
       "defaultConfiguration": "development",
       "dependsOn": ["build"],
       "options": {
-        "buildTarget": "apps:build",
-        "runBuildTargetDependencies": false
+        "buildTarget": "serviceA:build",
+        "runBuildTargetDependencies": true
       },
       "configurations": {
         "development": {
-          "buildTarget": "apps:build:development"
+          "buildTarget": "serviceA:build:development"
         },
         "production": {
-          "buildTarget": "apps:build:production"
+          "buildTarget": "serviceA:build:production"
         }
       }
     },
