feat: update lint config and errors

--- a/apps/main/project.json
+++ b/apps/main/project.json
@@ -5,6 +5,12 @@
   "projectType": "application",
   "tags": [],
   "targets": {
+    "lint": {
+      "executor": "@nx/linter:eslint",
+      "options": {
+        "lintFilePatterns": ["apps/main/**/*.ts"]
+      }
+    },
     "build": {
       "executor": "@nx/esbuild:esbuild",
       "cache": false,
