feat: add mean service tests

--- a/apps/main/project.json
+++ b/apps/main/project.json
@@ -69,7 +69,10 @@
       }
     },
     "test": {
+      "executor": "@nx/jest:jest",
+      "outputs": ["{workspaceRoot}/coverage/apps/main"],
       "options": {
+        "jestConfig": "apps/main/jest.config.ts",
         "passWithNoTests": true
       }
     }
