--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "test:ci": "nx run-many --target test --all --parallel --ci",
     "test:debug": "nx run-many --target test --all --parallel --debug",
     "test:debug:watch": "nx run-many --target test --all --parallel",
+    "test:main": "nx run main:test",
     "migration:run": "nx run core:migrate",
     "migration:revert": "npm run migration:revert",
     "migration:generate": "typeorm migration:generate -d libs/core/src/migrations/data-source.ts libs/core/src/migrations/generated"
