--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "test:debug": "nx run-many --target test --all --parallel --debug",
     "test:debug:watch": "nx run-many --target test --all --parallel",
     "test:main": "nx run main:test",
+    "test:service-a": "nx run serviceA:test",
     "migration:run": "nx run core:migrate",
     "migration:revert": "npm run migration:revert",
     "migration:generate": "typeorm migration:generate -d libs/core/src/migrations/data-source.ts libs/core/src/migrations/generated"
