chore: update main build config

--- a/.github/workflows/cd-main-service.yml
+++ b/.github/workflows/cd-main-service.yml
@@ -66,7 +66,7 @@ jobs:
       - name: Build and push Docker image
         uses: docker/build-push-action@v5
         with:
-          context: ./apps/main
+          context: .
           file: ./apps/main/Dockerfile
           push: true
           tags: ${{ steps.meta.outputs.tags }}
