--- a/.github/workflows/cd-main-service.yml
+++ b/.github/workflows/cd-main-service.yml
@@ -16,7 +16,7 @@ env:
   DOCKER_IMAGE: famchankou/shared_main_service
 
 jobs:
-  lint-test-build:
+  lint-test-build-main-service:
     runs-on: ubuntu-latest
 
     steps:
@@ -40,9 +40,9 @@ jobs:
       - name: Build main service
         run: npm run build:main
 
-  docker:
+  docker-main-service:
     runs-on: ubuntu-latest
-    needs: lint-test-build
+    needs: lint-test-build-main-service
 
     steps:
       - name: Checkout code
