--- a/.github/workflows/cd-service-a.yml
+++ b/.github/workflows/cd-service-a.yml
@@ -16,7 +16,7 @@ env:
   DOCKER_IMAGE: famchankou/shared_service_a
 
 jobs:
-  lint-test-build:
+  lint-test-build-service-a:
     runs-on: ubuntu-latest
 
     steps:
@@ -32,7 +32,7 @@ jobs:
         run: npm ci
 
       - name: Run lint
-        run: npm run service-a
+        run: npm run lint:service-a
 
       - name: Run unit tests
         run: npm run test:service-a
@@ -40,9 +40,9 @@ jobs:
       - name: Build service a
         run: npm run build:service-a
 
-  docker:
+  docker-service-a:
     runs-on: ubuntu-latest
-    needs: lint-test-build
+    needs: lint-test-build-service-a
 
     steps:
       - name: Checkout code
