--- a/libs/core/package.json
+++ b/libs/core/package.json
@@ -4,6 +4,9 @@
   "type": "commonjs",
   "main": "./index.js",
   "types": "./index.d.ts",
+  "publishConfig": {
+    "access": "public"
+  },
   "dependencies": {
     "tslib": "^2.3.0",
     "joi": "^17.13.3",
