--- a/libs/core/package.json
+++ b/libs/core/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@shared/core",
+  "name": "@famchankou/shared-core",
   "version": "0.0.1",
   "type": "commonjs",
   "main": "./index.js",
